infra/k8s/couchdb.yml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: smartinventory
  labels:
    app: smartinventory
spec:
  ports:
    - port: 5984
  selector:
    app: smartinventory
    tier: couchdb
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: smartinventory
  name: couchdb
  labels:
    app: smartinventory
spec:
  selector:
    matchLabels:
      app: smartinventory
      tier: couchdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: smartinventory
        tier: couchdb
    spec:
      containers:
        - image: couchdb:3
          name: couchdb
          ports:
            - containerPort: 5984
              name: couchdb
          volumeMounts:
            - name: couchdb-data
              mountPath: /opt/couchdb/data
      volumes:
        - name: couchdb-data
          persistentVolumeClaim:
            claimName: couchdb-data-claim
