infra/k8s/database_inv.yml
apiVersion: v1
kind: Service
metadata:
  name: inventory-psql
  labels:
    app: smartinventory
spec:
  ports:
    - port: 5432
  selector:
    app: smartinventory
    tier: inventory-psql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-psql
  labels:
    app: smartinventory
spec:
  selector:
    matchLabels:
      app: smartinventory
      tier: inventory-psql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: smartinventory
        tier: inventory-psql
    spec:
      containers:
        - image: postgres:14
          name: inventory-psql
          ports:
            - containerPort: 5432
              name: inventory-psql
          volumeMounts:
            - name: postgres-inv-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-inv-data
          persistentVolumeClaim:
            claimName: postgres-inv-data-claim
