infra/k8s/rabbitmq.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: smartinventory
spec:
  type: NodePort
  ports:
    - name: rabbitmq
      protocol: TCP
      targetPort: 5672
      port: 5672
    - name: mqtt
      protocol: TCP
      targetPort: 1883
      port: 1883
    - name: prometheus
      protocol: TCP
      targetPort: 15692
      port: 15692
    - name: management
      protocol: TCP
      targetPort: 15672
      port: 15672
  selector:
    app: smartinventory
    tier: rabbitmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: smartinventory
spec:
  selector:
    matchLabels:
      app: smartinventory
      tier: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: smartinventory
        tier: rabbitmq
    spec:
      containers:
        - image: smartinventory_rabbit_mq:latest
          name: rabbitmq
          imagePullPolicy: Never
          command: ["rabbitmq-server"]
          ports:
            - containerPort: 5672
              name: rabbitmq
            - containerPort: 1883
              name: mqtt
            - containerPort: 15692
              name: prometheus
            - containerPort: 15672
              name: management
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-data-claim
