infra/k8s/vue_bo.yml
apiVersion: v1
kind: Service
metadata:
  name: bo-front
  namespace: smartinventory
  labels:
    app: smartinventory
spec:
  ports:
    - port: 80
  selector:
    app: smartinventory
    tier: bo-front
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: smartinventory
  name: bo-front
  labels:
    app: smartinventory
spec:
  selector:
    matchLabels:
      app: smartinventory
      tier: bo-front
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: smartinventory
        tier: bo-front
    spec:
      containers:
        - image: localhost:5000/smartinv_bo_front:stable
          imagePullPolicy: Always
          name: bo-front
          ports:
            - containerPort: 80
              name: bo-front
